; ModuleID = '/home/carl/AnghaBench/linux/arch/parisc/kernel/extr_pci-dma.c_arch_sync_dma_for_device.c'
source_filename = "/home/carl/AnghaBench/linux/arch/parisc/kernel/extr_pci-dma.c_arch_sync_dma_for_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @arch_sync_dma_for_device(%struct.device* %0, i32 %1, i64 %2, i32 %3) #0 {
  %5 = alloca %struct.device*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i32, align 4
  store %struct.device* %0, %struct.device** %5, align 8
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  store i32 %3, i32* %8, align 4
  %9 = load i32, i32* %6, align 4
  %10 = call i64 @phys_to_virt(i32 %9)
  %11 = load i64, i64* %7, align 8
  %12 = call i32 @flush_kernel_dcache_range(i64 %10, i64 %11)
  ret void
}

declare dso_local i32 @flush_kernel_dcache_range(i64, i64) #1

declare dso_local i64 @phys_to_virt(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
